index.css
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

:root {
    --ivory: #E6E6FA;
    --jet-black: #0A0A0A;
    --grey: #8e98c0;
    --primary: #0476D0;
    --secondary: #069DBF;
    scroll-behavior: smooth;
}

::-webkit-scrollbar {
    width: 0px;
}

.homepage {
    width: 100%;
    height: 100vh;
    background-color: var(--jet-black);
    padding: 60px;
    position: sticky;
    top: 0;
    z-index: 1;
}

nav {
    color: var(--ivory);
    font-family: 'DM Sans', sans-serif;
    display: flex;
    justify-content: space-between;
    align-items: flex-end;
}

.nav-name {
    font-size: 2.5rem;
    z-index: 10;
}

.nav-items {
    list-style: none;
    display: flex;
    gap: 70px;
    font-size: 1.5rem;
    color: var(--grey);
    z-index: 10;
}

.nav-item {
    padding: 5px 20px;
    transition: 0.2s cubic-bezier(0.19, 1, 0.22, 1);
}

.nav-item a {
    text-decoration: none;
    color: var(--grey);
}

.nav-item:hover, .nav-item.outsource:hover, .nav-item a:hover {
    border-color: var(--ivory);
    color: var(--ivory);
    cursor: pointer;
}

.outsource {
    border: 2px solid var(--grey);
    border-radius: 1.5rem;
    transition: 0.2s cubic-bezier(0.19, 1, 0.22, 1);
}

main {
    background: url("assets/pattern2.png") center 85% /cover;
    display: flex;
    height: 100%;
    flex-direction: column;
    justify-content: center;
}

.main-title {
    color: white;
    z-index: 15;
    font-family: 'Montserrat';
    font-weight: 500;
    font-size: 11rem;
}

.first {
    margin-left: 100px;
}

.second {
    margin-top: -20px;
    margin-left: 50px;
    display: flex;
}


.main-description {
    color: var(--grey);
    font-family: 'DM Sans', sans-serif;
    font-size: 2.5rem;
    text-align: center;
}

.scroll {
    position: absolute;
    bottom: 60px;
    right: 5%;
}

.scroll-indication {
    cursor: pointer;
    background-color: var(--ivory);
    width: 64px;
    height: 64px;
    border-radius: 50%;
    display: flex;
    justify-content: center;
    align-items: center;
    transition: 0.2s;
    offset-anchor: center;
}

.scroll-indication:hover {
    transform: scale(1.2);
}


.scroll-text {
    color: var(--ivory);
    font-family: 'DM Sans';
    position: absolute;
    top: -50px;
    left: 30px;
}

.scroll-text span {
    position: absolute;
    transform-origin: 0 80px;
    font-size: 1.2rem;
}

.landing-contact {
    color: white;
    position: absolute;
    font-family: 'DM Sans';
    background-color: var(--secondary);
    width: 100px;
    height: 100px;
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 50%;
    bottom: 5%;
    left: 5%;
}

.skills {
    background-color: var(--ivory);
    color: var(--jet-black);
    border-radius: 16px 16px 0 0;
    position: relative;
    z-index: 10;
    padding: 150px 100px;
}


.skills-header {
    font-family: 'Montserrat', sans-serif;
    font-weight: 500;
    font-size: 6rem;
}

.skills-descr {
    font-family: 'DM Sans', sans-serif;
    font-size: 2rem;
}

.stack-container {
    margin-top: 100px;
    display: flex;
    font-family: 'DM Sans', sans-serif;
    font-size: 3rem;
}

p.stack-title {
    flex: 2;
    font-weight: 500;
}

.stack-list-container {
    flex: 3;
    list-style: none;
}

.skill {
    border-bottom: 1px solid black;
    margin-top: 10px;
    /* cursor: none; */
}

.skill p {
    margin-left: 30px;
    transition: .2s;
}

.skill:hover p {
    color: var(--primary);
    margin-left: 60px;
}

.skill::before {
    content: url("assets/arrow-down-2.png");
    padding-right: 20px;
    transition: all .1s;
    display: inline-block;
    visibility: hidden;
    position: absolute;
}

.skill:hover::before {
    width: auto;
    transform: rotate(-90deg) translateX(10px);
    visibility: unset;
}

@media (max-width: 900px) {
    main {
        justify-content: end;
        background: url("assets/pattern2.png") center -100px /cover;
    }
    .main-title {
        font-size: 4rem;
    }

    .main-description {
        font-size: 1.3rem;
    }

    .nav-items {
        gap: 10px;
    }

    .main-title-container {
        margin: 0 auto;
    }

    .first {
        margin-left: 0px;
    }

    .second svg {
        width: 90px;
        height: 90px;
    }

    .scroll-text, .landing-contact { 
        display: none;
    }

    .main-description {
        margin-bottom: 40px;
    }

    .stack-container {
        flex-direction: column;
    }

    p.stack-title {
        text-align: center;
    }
}

@media (max-width: 725px) {
    nav {
        justify-content: center;
    }
    .nav-items {
        display: none;
    }

    .scroll {
        display: none;
    }

    .main-title {
        font-size: 3rem;
    }

    .second {
        margin-top: 0px;
    }

    .second svg {
        width: 70px;
        height: 70px;
    }

    .skills-header {
        font-size: 4rem;
    }

    .skills-descr {
        font-size: 1.5rem;
    }

}

@media (max-width: 520px) {
    .second svg {
        display: none;
    }

    .main-title {
        text-align: center;
    }

    .second {
        margin: 0;
    }

    .skills {
        padding: 100px 30px;
    }

    .skill {
        font-size: 2rem;
    }
}

@keyframes spin {
    0% {
        transform: rotate(0deg);
    }
    100% {
        transform: rotate(360deg);
    }
}

